# taxfree_license_check_bot

./: .gitignore  README.md  pyproject.toml
bot/: __main__.py  config.py
bot/services/: get_mosreg_license.py
bot/utils/: display_mosru_license_data.py
